added weapon cards to html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">berserker</span>
+                <span class="btn__text">Berserker</span>
               </a>
             </div>
 
@@ -98,7 +98,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-4">
+          <!-- <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
@@ -118,7 +118,7 @@
                 <span class="btn__prompt">></span>
                 <span class="btn__text">Assassin</span>
               </a>
-            </div>
+            </div> -->
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--yellow" href="#">
@@ -152,6 +152,31 @@
           </a>
         </div>
       </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="card__button">
+              <a class="class__link btn btn--big btn--blue" href="#">
+                <span class="btn__prompt">></span>
+                <span class="btn__text">Dagger</span>
+              </a>
+            </div>
+            <div class="card__button">
+              <a class="class__link btn btn--big btn--blue" href="#">
+                <span class="btn__prompt">></span>
+                <span class="btn__text">Broad Sword</span>
+              </a>
+            </div>
+            <div class="card__button">
+              <a class="class__link btn btn--big btn--blue" href="#">
+                <span class="btn__prompt">></span>
+                <span class="btn__text">War Axe</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       <div class="card__button">
         <a class="card__link btn btn--big btn--orange"
