adjusted div text for weapon select to be consistant with other sections

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <section id="weapon-select" class="card card--weapon">
       <div class="card__prompt">
-        <div>choose your weapon</div>
+        <div>CHOOSE YOUR WEAPON</div>
         <div>
           <a class="card__back btn btn--small"
              href="#"
