--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="container-fluid">
+      <div id="choosePath" class="container-fluid">
         <div class="row">
           <div class="col-sm-4">
             <div class="card__button">
