updated the class and weapon selection to input information

--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Warrior</span>
+                <span data-class="Warrior" class="btn__text youAreHere">Warrior</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Valkyrie</span>
+                <span data-class="Valkyrie" class="btn__text youAreHere">Valkyrie</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Berserker</span>
+                <span data-class="Berserker" class="btn__text youAreHere">Berserker</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Monk</span>
+                <span data-class="Monk" class="btn__text youAreHere">Monk</span>
               </a>
             </div>
           </div>
@@ -80,21 +80,21 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Wizard</span>
+                <span data-class="Wizard" class="btn__text youAreHere">Wizard</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Sorcerer</span>
+                <span data-class="Sorcerer" class="btn__text youAreHere">Sorcerer</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Conjurer</span>
+                <span data-class="Conjurer" class="btn__text youAreHere">Conjurer</span>
               </a>
             </div>
           </div>
@@ -123,7 +123,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--yellow" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">surprise me</span>
+                <span data-class="Warrior" class="btn__text youAreHere">surprise me</span>
               </a>
             </div>
           </div>
@@ -158,19 +158,19 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Dagger</span>
+                <span data-class="Dagger" class="btn__text youAreHere">Dagger</span>
               </a>
             </div>
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">Broad Sword</span>
+                <span data-class="BroadSword" class="btn__text youAreHere">Broad Sword</span>
               </a>
             </div>
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt">></span>
-                <span class="btn__text">War Axe</span>
+                <span data-class="WarAxe" class="btn__text youAreHere">War Axe</span>
               </a>
             </div>
           </div>
