--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
            href="#"
            next="card--battleground">
           <span class="btn__prompt">></span>
-          <span class="btn__text">defeat your enemies</span>
+          <span class="btn__text getEnemy">defeat your enemies</span>
         </a>
       </div>
     </section>
