--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            href="#"
            next="card--class">
           <span class="btn__prompt">></span>
-          <span class="btn__text">Select class</span>
+          <span class="btn__text clickly">Select class</span>
         </a>
       </div>
     </section>
