--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <article id="game-container">
 
-    <section id="player-setup" class="card card--name">
+    <section id="player-setup" class="card card--name ">
       <div class="card__prompt">
         <div>RECORD YOUR NAME, ADVENTURER</div>
         <div class="field">
@@ -26,7 +26,7 @@
            href="#"
            next="card--class">
           <span class="btn__prompt">></span>
-          <span class="btn__text">Select class</span>
+          <span class="btn__text getMeName ">Select class</span>
         </a>
       </div>
     </section>
@@ -49,28 +49,32 @@
           <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
+                <img src="../images/warrior.jpg" style="height: 20px; width:20px">
                 <span data-class="Warrior" class="btn__text youAreHere">Warrior</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
+                <img src="../images/valkyrie.jpg"  style="height:20px; width: 20px">
                 <span data-class="Valkyrie" class="btn__text youAreHere">Valkyrie</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
+                <img src="../images/Berserker.jpeg" style="height:20px; width: 20px>
                 <span data-class="Berserker" class="btn__text youAreHere">Berserker</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
+                <img src="../images/Monk.jpeg"  style="height:20px; width: 20px>
                 <span data-class="Monk" class="btn__text youAreHere">Monk</span>
               </a>
             </div>
@@ -79,21 +83,24 @@
           <div class="col-sm-4">
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
+                <img src="../images/wizard.jpeg"  style="height:20px; width: 20px>
                 <span data-class="Wizard" class="btn__text youAreHere">Wizard</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
+                <img src="../images/Sorcerer.jpeg"   style="height:20px; width: 20px>
                 <span data-class="Sorcerer" class="btn__text youAreHere">Sorcerer</span>
               </a>
             </div>
 
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
-                <span class="btn__prompt">></span>
+                <span class="btn__prompt"></span>
+                <img src="../images/Conjurer.jpeg" style="height:20px; width: 20px>
                 <span data-class="Conjurer" class="btn__text youAreHere">Conjurer</span>
               </a>
             </div>
