--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt"></span>
-                <img src="../images/Berserker.jpeg" style="height:20px; width: 20px>
+                <img src="../images/Berserker.jpeg" style="height:20px; width: 20px">
                 <span data-class="Berserker" class="btn__text youAreHere">Berserker</span>
               </a>
             </div>
@@ -77,7 +77,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt"></span>
-                <img src="../images/Monk.jpeg"  style="height:20px; width: 20px>
+                <img src="../images/Monk.jpeg"  style="height:20px; width: 20px">
                 <span data-class="Monk" class="btn__text youAreHere">Monk</span>
               </a>
             </div>
@@ -87,7 +87,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt"></span>
-                <img src="../images/wizard.jpeg"  style="height:20px; width: 20px>
+                <img src="../images/wizard.jpeg"  style="height:20px; width: 20px">
                 <span data-class="Wizard" class="btn__text youAreHere">Wizard</span>
               </a>
             </div>
@@ -95,7 +95,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt"></span>
-                <img src="../images/Sorcerer.jpeg"   style="height:20px; width: 20px>
+                <img src="../images/Sorcerer.jpeg"   style="height:20px; width: 20px">
                 <span data-class="Sorcerer" class="btn__text youAreHere">Sorcerer</span>
               </a>
             </div>
@@ -103,7 +103,7 @@
             <div class="card__button">
               <a class="class__link btn btn--big btn--blue" href="#">
                 <span class="btn__prompt"></span>
-                <img src="../images/Conjurer.jpeg" style="height:20px; width: 20px>
+                <img src="../images/Conjurer.jpeg" style="height:20px; width: 20px">
                 <span data-class="Conjurer" class="btn__text youAreHere">Conjurer</span>
               </a>
             </div>
