finished fight end event

--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
           weapon <br>
           stats--
         </div>
+        <div id="gameOver" class="col-md-4 col-md-offset-4"></div>
       </div>
     </section>
 
