added damage delt box

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
           weapon <br>
           stats--
         </div>
+        <div id="battleReport" class="col-md-4 col-md-offest-4"></div>
         <div id="attackButton" class="col-md-1" class="card__button">
           <a class="btn btn--big btn--orange"
              href="#"
