--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
         <div id="gameOver" class="col-md-4 col-md-offset-4"></div>
       </div>
       <div id="gameOver">
+      <!-- <button id="playAgain" class="playAgain btn__text btn btn--big btn--orange col-md-4 col-md-offset-4"> Play Again</button> -->
       </div>
     </section>
 
